--- a/UniGearRentJAVA/pom.xml
+++ b/UniGearRentJAVA/pom.xml
@@ -56,6 +56,15 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <version>3.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
