--- a/UniGearRentJAVA/compose.yaml
+++ b/UniGearRentJAVA/compose.yaml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=unigearrent'
+      - 'POSTGRES_PASSWORD=DatabasePassword123'
+      - 'POSTGRES_USER=PlaceholderUser'
     ports:
       - '5432'
