--- a/UniGearRentJAVA/src/main/resources/application.properties
+++ b/UniGearRentJAVA/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=UniGearRentJAVA
+security.basic.enable: false
+security.ignored=/**
+spring.datasource.url=jdbc:postgresql://localhost:5432/unigearrent
+spring.datasource.username=PlaceholderUser
+spring.datasource.password=DatabasePassword123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
