feat: change port to 9000

--- a/UniGearRentJAVA/src/main/resources/application.properties
+++ b/UniGearRentJAVA/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/unigearrent
 spring.datasource.username=PlaceholderUser
 spring.datasource.password=DatabasePassword123
 spring.jpa.hibernate.ddl-auto=update
+server.port=9000
