--- a/UniGearRentJAVA/pom.xml
+++ b/UniGearRentJAVA/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
             <version>3.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+        </dependency>
     </dependencies>
 
     <build>
